--- a/B2BApp.Web/Views/Urun/Index.cshtml
+++ b/B2BApp.Web/Views/Urun/Index.cshtml
@@ -52,9 +52,11 @@
             <input type="number" id="urunFiyat" class="form-control" value="">
         </div>
         <div class="form-group">
-            <label for="urunSatisFiyat" class="form-label">Fiyat</label>
-            <input type="number" id="urunSatisFiyat" class="form-control" value="">
+            <label for="urunSatisFiyat" class="form-label">Satış Fiyatı</label>
+            <input type="text" id="urunSatisFiyat" class="form-control" >
         </div>
+
+
 
         <div class="input-group">
             <label for="categorySelectDrawer" class="form-label" style="margin-right:15px">Kategoriler: </label> 
@@ -261,7 +263,7 @@
             html:
                 `<label for="urunIsimEkle" class="form-label">Urun</label> <input type="text" id="urunIsimEkle" class= "form-control" value="" required>
                          <label for= "urunFiyatEkle" class= "form-label">Fiyat</label> <input type="number" id = "urunFiyatEkle" class= "form-control" value = "" required>
-                             <label for= "urunSatisFiyat" class= "form-label">Satış Fiyat</label> <input type="number" id = "urunSatisFiyat" class= "form-control" value = "" required>
+                             <label for= "urunSatisFiyatEkle" class= "form-label">Satış Fiyat</label> <input type="number" id = "urunSatisFiyatEkle" class= "form-control" value = "" required>
                          <br/>
 
                              <label for="categorySelectSave" class= "form-label">Kategori</label> <select id="categorySelectSave" class="select2" placeholder='select item'>                    <option></option>
@@ -279,9 +281,8 @@
             },
             didOpen: getDatasSave(),
         }).then((result) => {
-;
+
             if (result.isConfirmed) {
-                console.log($('#categorySelectSave').val());
                 $.ajax({
                     url: 'https://localhost:44369/api/Urun',
                     crossDomain: true,
@@ -293,12 +294,12 @@
                     contentType: 'application/json',
                     // data: '{\n  "id": "",\n  "urunAdi": "Urun-1",\n  "urunTel": "5312854868"\n}',
                     data: JSON.stringify({
-                        'id': '',
-                        'urunAdi': $('#urunIsimEkle').val(),
+                        //'id': '',
+                        'urunAdi':  $('#urunIsimEkle').val(),
                         'kategoriId': $('#categorySelectSave').val(),
                         'tedarikciId': $('#tedarikciSelectSave').val(),
                         'fiyat': $('#urunFiyatEkle').val(),
-                        'satisFiyati': $('#urunSatisFiyat').val(),
+                        'satisFiyati': $('#urunSatisFiyatEkle').val(),
                     })
                 }).done(function (response) {
                     if (response != null) {
